--- a/new_features_project/app1/templates/narrative_crud.html
+++ b/new_features_project/app1/templates/narrative_crud.html
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label for="content">Content:</label>
-                <textarea id="content" name="content" class="form-control" rows="5" placeholder="Write your narrative here..&#10;Eg :&#10;Subject {subject}&#10;Age {age}">{{ form.content.value|default_if_none:'' }}</textarea>
+                <textarea id="content" name="content" class="form-control" rows="5" placeholder="Write your narrative here..&#10;Eg :&#10;Subject {subject} Age {age}">{{ form.content.value|default_if_none:'' }}</textarea>
             </div>
             <button type="submit" class="btn btn-success">Save</button>
             {% if narrative %}
