--- a/new_features_project/app1/templates/narrative_crud.html
+++ b/new_features_project/app1/templates/narrative_crud.html
@@ -22,9 +22,23 @@
                 <label for="age">Age:</label>
                 <input type="number" id="age" name="age" class="form-control" value="{{ form.age.value|default_if_none:'' }}">
             </div>
-            <div class="form-group">
-                <label for="content">Content:</label>
-                <textarea id="content" name="content" class="form-control" rows="5" placeholder="Write your narrative here..&#10;Eg :&#10;Subject {subject} Age {age}">{{ form.content.value|default_if_none:'' }}</textarea>
+            <div class="form-group row">
+                <!-- <label for="exampleFormControlSelect2">Example multiple select</label> -->
+                <select multiple class="form-control col-2" id="exampleFormControlSelect2">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+            <!-- <div class="form-group"> -->
+                <!-- <label for="content">Content:</label> -->
+                <textarea id="content" name="content" class="form-control col-10" rows="10" placeholder="Write your narrative here..&#10;Eg :&#10;Subject {subject} Age {age}">{{ form.content.value|default_if_none:'' }}</textarea>
             </div>
             <button type="submit" class="btn btn-success">Save</button>
             {% if narrative %}
