'added_code_pdf_processing_widgets'

--- a/new_features_project/app1/templates/index.html
+++ b/new_features_project/app1/templates/index.html
@@ -2,4 +2,5 @@
 <button><a href="{% url 'view2' %}">view2</a></button><br>
 <button><a href="{% url 'new' %}">new</a></button><br>
 <button><a href="{% url 'narrative-crud' %}">Narrative  get</a></button><br>
+<button><a href="{% url 'upload-file' %}">Upload  file functionality</a></button>
  
