--- a/new_features_project/app1/templates/narrative_crud_new.html
+++ b/new_features_project/app1/templates/narrative_crud_new.html
@@ -1,12 +1,11 @@
 <!-- narrative_crud.html -->
- {% load my_filters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Narrative CRUD</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
@@ -23,23 +22,9 @@
                 <label for="age">Age:</label>
                 <input type="number" id="age" name="age" class="form-control" value="{{ form.age.value|default_if_none:'' }}">
             </div>
-            <div class="form-group row">
-                <!-- <label for="exampleFormControlSelect2">Example multiple select</label> -->
-                <select multiple class="form-control col-2" id="exampleFormControlSelect2">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-            <!-- <div class="form-group"> -->
-                <!-- <label for="content">Content:</label> -->
-                <textarea id="content" name="content" class="form-control col-10" rows="10" placeholder="Write your narrative here..&#10;Eg :&#10;Subject {subject} Age {age}">{{ form.content.value|default_if_none:'' }}</textarea>
+            <div class="form-group">
+                <label for="content">Content:</label>
+                <textarea id="content" name="content" class="form-control" rows="5" placeholder="Write your narrative here..&#10;Eg :&#10;Subject {subject}&#10;Age {age}">{{ form.content.value|default_if_none:'' }}</textarea>
             </div>
             <button type="submit" class="btn btn-success">Save</button>
             {% if narrative %}
@@ -47,18 +32,25 @@
             {% endif %}
         </form>
 
-        <!-- List of narratives -->
+        <!-- Select dropdown for narratives -->
         <h2>Narrative List</h2>
+        <select id="narrative-select" class="form-control mb-3">
+            <option value="">Select a Narrative</option>
+            {% for narrative in narratives %}
+            <option value="{{ narrative.pk }}">{{ narrative.subject }}</option>
+            {% endfor %}
+        </select>
+
+        <!-- List of narratives with edit and delete buttons -->
         <ul class="list-group">
-            {{narratives|length}}
             {% for narrative in narratives %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>{{ narrative.subject|number:'124-74' }}</span>
+                <span>{{ narrative.subject }}</span>
                 <div>
                     <a href="{% url 'narrative-crud-with-pk' narrative.pk %}" class="btn btn-primary btn-sm">Edit</a>
                     <form method="post" action="{% url 'narrative-crud-with-pk' narrative.pk %}" style="display:inline;">
                         {% csrf_token %}
-                        <input type="hidden" name="_method" value="delete">
+                        <input type="hidden" name="_method" value="DELETE">
                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                     </form>
                 </div>
@@ -66,5 +58,30 @@
             {% endfor %}
         </ul>
     </div>
+
+    <script>
+        $(document).ready(function(){
+            // Handle the narrative selection from dropdown
+            $('#narrative-select').change(function() {
+                var pk = $(this).val();
+                if (pk) {
+                    window.location.href = '{% url "narrative-crud-with-pk" 0 %}'.replace('0', pk);
+                }
+            });
+
+            // Handle show/hide for new narrative form
+            $('#new_narrative').hide();
+            $('#display_add_new_narrative').click(function(){
+                $('#new_narrative').show();
+                $(this).hide(); 
+            });
+
+            // Handle cancel button
+            $('#cancelBtn').click(function(){
+                $('#display_add_new_narrative').show();
+                $('#new_narrative').hide();
+            });
+        });
+    </script>
 </body>
 </html>
